[package]
name = "pickls"
version = "0.6.2"
edition = "2021"
license = "MIT"
keywords = ["LSP", "protocol", "command-line", "ide", "diagnostics"]
categories = ["development-tools", "text-editors"]
description = "The General Purpose Language Server for Command-Line Linters and Formatters"
readme = "README.md"
homepage = "https://github.com/wbbradley/pickls"
repository = "https://github.com/wbbradley/pickls"

[dependencies]
libc = "0.2.159"
log = "0.4.22"
nix = { version = "0.29.0", features = ["process"] }
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
shlex = "1.3.0"
simple-logging = "2.0.2"
sysinfo = "0.31.4"
thiserror = "1.0.64"
toml = "0.8.19"
lsp-types = "0.97.0"
xdg = "2.5.2"
