[package]
name = "pickls"
version = "0.7.0"
edition = "2024"
license = "MIT"
keywords = ["LSP", "protocol", "command-line", "ide", "diagnostics"]
categories = ["development-tools", "text-editors"]
description = "The General Purpose Language Server for Command-Line Linters and Formatters"
readme = "README.md"
homepage = "https://github.com/wbbradley/pickls"
repository = "https://github.com/wbbradley/pickls"

[dependencies]
libc = "0.2.185"
log = "0.4.29"
nix = { version = "0.31.2", features = ["process"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
shlex = "1.3.0"
simple-logging = "2.0.2"
sysinfo = "0.38.4"
thiserror = "2.0.18"
lsp-types = "0.97.0"
xdg = "3.0.0"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "process"] }
reqwest = { version = "0.13.2", features = ["json"] }
crossbeam-channel = "0.5.15"
handlebars = "6.4.0"
anyhow = "1.0.102"
schemars = "1.2.1"
futures = "0.3.32"
strip-ansi-escapes = "0.2.1"
